--- a/Assest/Css/estilo.css
+++ b/Assest/Css/estilo.css
@@ -73,6 +73,20 @@ header {
     color: #ccc;
 }
 
+.button{
+    display: inline-block;
+    background-color: #B28756;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 11px;
+    font-weight: 600;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 30px;
+    border-radius: 20px;
+
+}
+
 .banner{
     height: calc(100vh - 100px);
     background-color: #333;
@@ -116,20 +130,6 @@ header {
 .banner h2{
     text-transform: uppercase;
     margin-top: 20px;
-
-}
-
-.banner a{
-    display: block;
-    background-color: #B28756;
-    color: #fff;
-    text-transform: uppercase;
-    font-size: 11px;
-    font-weight: 600;
-    text-decoration: none;
-    padding: 10px 30px;
-    margin-top: 30px;
-    border-radius: 20px;
 
 }
 
@@ -187,8 +187,6 @@ header {
 .default .section-body{
     max-width: 1140px;
     margin: auto;
-    min-height: 100px;
-    background-color: #ccc;
     margin-bottom: 40px;
 
 
@@ -198,7 +196,8 @@ header {
     background-color: #f7f7f7;
 }
 
-.default .light .section-title{
+.default .light .section-title,
+.default .light .section-body{
     color: #000;
 }
 
@@ -206,7 +205,45 @@ header {
     background-color: #000;
 }
 
-.default .dark .section-title{
+.default .dark .section-title,
+.default .dark .section-body{
     color: #fff;
 
 }
+
+
+
+
+
+
+
+
+
+/*
+Css de area especificas.
+*/
+
+.section-aboutus{
+    display: flex;
+}
+
+.section-aboutus--left{
+    flex: 1;
+}
+
+.section-aboutus--right{
+   width: 520px;
+   text-align: center;
+}
+
+.section-aboutus--right img{
+    width: 480px;
+    box-shadow: 0px 5px 10px #333;
+}
+
+.section-aboutus--left p{
+    font-size: 11px;
+    line-height: 25px;
+    
+}
+
