--- a/Assest/Css/estilo.css
+++ b/Assest/Css/estilo.css
@@ -818,3 +818,143 @@ Css de area especificas.
 .section-contact .button:hover{
     background-color: black;
 }
+
+.section-map{
+    background-image: url(../imagens/Screenshot\ from\ 2022-01-03\ 12-25-20.png);
+    background-size: cover;
+    background-position: center;
+    padding-top: 30px;
+    padding-bottom: 30px;    
+}
+
+.section-map--area{
+    width: 100vw;
+    max-width: 1140px;
+    margin: auto;
+
+}
+
+.section-map--info{
+    width: 50%;
+    padding: 30px;
+    background-color: #fff;
+    color: #000;
+    
+
+}
+
+.section-map--info-item{
+    display: flex;
+    align-items: center;
+    color: #999;
+    margin-bottom: 10px;
+}
+
+.section-map--info-item-img{
+    width: 30px;
+    height: 30px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #999;
+    padding: 5px;
+    border-radius: 50%;
+    margin-right: 15px;
+}
+
+.section-map--info-item-img img{
+    width: 15px;
+    height: auto;
+}
+
+footer{
+    display: flex;
+    background-color: #000;
+    color: #fff;
+    flex-direction: column;
+}
+
+.footer-area{
+    max-width: 1140px;
+    margin:auto;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-social{
+    display: flex;
+    width: 280px;
+    height: auto;   
+    margin: 10px;
+}
+
+.footer-item-img{
+    width: 25px;
+    height: 25px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #333;
+    padding: 5px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.footer-item-img img{
+    width: 10px;
+    height: auto;
+}
+
+.footer-item-img:hover{
+    cursor: pointer;
+    background-color: #B28756;
+}
+
+.footer-desc{
+    font-size: 11px;
+    text-align:left;
+    width: 280px;
+    height: auto;
+    margin: 10px;
+}
+
+.footer-contact{
+    display: flex;
+    width: 280px;
+    height: auto;   
+    margin: 10px;
+    background-color: #333;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.footer-contact-email input{
+    display:block;
+    width:100%;
+    height:40px;
+    border:0;
+    background:transparent;
+    border-bottom:1px solid #CCC;
+    outline:0;
+    margin-top:10px;
+    color: #fff;
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 9px;
+}
+
+.footer_copy{
+    border-top: 1px solid #2c2c2c;
+    height: 80px;
+    line-height: 40px;
+    color: #5c5c5c;
+    font-size: 12px;
+    margin-top: 30px;
+}
+
+.footer_copy p{
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
